Cleanup the code. Disable warmup in fastdoubleparserdemo Main.java.